2020/11/24 build 8----------------------
・マテリアル設定インスペクタの一番上に、現在選択中のシェーダーバリエーションについての説明を追加しました。
「〇〇について」の見出しをクリックすると説明が見られます。
・各設定カテゴリについて説明するウィンドウを追加しました。
説明を見たい設定カテゴリの右端にあるヘルプアイコンをクリックしてください。
・Stencil, EmissiveFreak, Outline関連の類似バリエーションをOpaque, Fade, Cutoutから動的に作るメニューを追加しました。
「AXCS/Generator」メニューから実行できますが、シェーダー改変の予定がなければ使用する意味もありません。
　・↑に伴い、EmissiveFreakとOutlineバリエーションにいくつかシェーダーバリエーションが増えた気がする、たぶん。

※ build 7 以前をインポートしている場合、正常に動作しない可能性がありますので、
一度「ArxCharacterShaders」フォルダを削除した上で、改めてbuild8をインポートしてください。

2020/11/04 build 7----------------------
・以下のシェーダーバリエーションでAmbient Light Intensityが使用出来なくなっていた問題を修正
EmissiveFreakFade
EmissiveFreakFadeRefracted
EmissiveFreakStencilReaderFade
StencilReaderDoubleFade
StencilReaderFade

2020/11/01 build 6----------------------
・マテリアルインスペクタの一番上に選択中のバリエーションの説明を追加
・各AlphaCutoutとFadeバリエーションにIgnoreProjector=trueを設定
・各FadeバリエーションのRenderQueueをTransparent-100（2900）に設定
・シェーダーキーワード「_」がいちいち出ないように調整

2020/11/01 build 5----------------------
・Arktoon Shadersで実現していたバリデーションを全部復旧
ただし並び替えとかいろいろしたのでひとまずサンプルシーン見てください。
↓の並びは忘れた方が楽です

2020/11/01 build 4----------------------
バリエーションを追加
- AlphaCutout
- EmissiveFreak/AlphaCutout
- Fade
- FadeRefracted
- Opaque
- Outline/AlphaCutout
- Outline/Opaque
- Stencil/Reader/AlphaCutout
- Stencil/Writer/AlphaCutout
- Stencil/WriterMask/AlphaCutout

Shadowカテゴリに「Ambient Light Intensity」を追加：
ディレクショナルライトを除く、空間色がどの程度陰に反映されるかを指定できます。
0:影響無し（真っ黒） ～ 1:影響度100%（Environment LightingまたはLight Probeの色）
初期値は0.75です。

以前のビルド----------------------
忘れた