@@ -115,6 +115,10 @@ Material:
         m_Texture: {fileID: 0}
         m_Scale: {x: 1, y: 1}
         m_Offset: {x: 0, y: 0}
+    - _ShadowPlanBCustomShadowDetailMap:
+        m_Texture: {fileID: 0}
+        m_Scale: {x: 1, y: 1}
+        m_Offset: {x: 0, y: 0}
     - _ShadowPlanBCustomShadowTexture:
         m_Texture: {fileID: 0}
         m_Scale: {x: 1, y: 1}
@@ -132,6 +136,7 @@ Material:
     - _Cull: 2
     - _CustomShadow2nd: 0
     - _Cutoff: 0.5
+    - _DetailAlbedoScale: 1
     - _DetailNormalMapScale: 1
     - _DoubleSidedBackfaceHueShiftFromBase: 0
     - _DoubleSidedBackfaceLightIntensity: 0.5
@@ -164,8 +169,12 @@ Material:
     - _PointShadowborder: 0.5
     - _PointShadowborderBlur: 0.01
     - _ProximityOverrideAlphaOnly: 1
-    - _ProximityOverrideBegin: 0.532
-    - _ProximityOverrideEnd: 0.074
+    - _ProximityOverrideAlphaScale: 0
+    - _ProximityOverrideBegin: 0.892
+    - _ProximityOverrideEnd: 0.287
+    - _ProximityOverrideHueShiftFromBase: -0.01
+    - _ProximityOverrideSaturationFromBase: 1.5
+    - _ProximityOverrideValueFromBase: 0
     - _ReflectionNormalMix: 1
     - _ReflectionReflectionPower: 1
     - _ReflectionShadeMix: 0
@@ -180,6 +189,7 @@ Material:
     - _RimShadeMix: 0
     - _RimUpperSideWidth: 0
     - _RimUseBaseTexture: 0
+    - _ShadowAmbientIntensity: 0.75
     - _ShadowCapBlend: 1
     - _ShadowCapBlendMode: 3
     - _ShadowCapNormalMix: 1
