@@ -1,3 +1,10 @@
+2020/12/09 build 9----------------------
+・不要なシェーダーファイルが入っていたため削除しました。
+・「Details」カテゴリを追加しました
+　Standardシェーダー等にあるDetailと同じ使い方で、主にカメラがオブジェクトに接近しても解像感を維持するために使われるセカンダリマップです。
+・Proximity Color Overrideで設定する色の設定方法を変更しました。
+
+
 2020/11/24 build 8----------------------
 ・マテリアル設定インスペクタの一番上に、現在選択中のシェーダーバリエーションについての説明を追加しました。
 「〇〇について」の見出しをクリックすると説明が見られます。
